buildscript {
    ext {
        springbootVersion = "3.4.13"
    }
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:1.0.10"
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:1.1.7"
    }
}

plugins {
    id "io.sentry.jvm.gradle" version "4.11.0" apply false
    id "com.bmuschko.docker-spring-boot-application" version "10.0.0" apply false
}

allprojects {
    group = 'com.media.bus'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        // Spring Boot 4.0.0 스냅샷 및 마일스톤 버전 유입을 원천 차단하기 위해 주석 처리 상태 유지
        // maven { url 'https://repo.spring.io/milestone' }
        // maven { url 'https://repo.spring.io/snapshot' }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    // 하위 모듈 전체에 Spring Boot 3.4.13 버전을 강제하기 위한 BOM(Bill of Materials) 설정 추가.
    // 이는 Spring Web, Tomcat, Servlet 등 전이적(Transitive) 의존성이 4.0.0 버전으로 임의 격상되는 현상을 물리적으로 방지합니다.
    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootVersion}"
        }
    }

    bootJar {
        enabled = false
    }

    jar {
        enabled = true
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        // Log4j2 전환: Logback 전이 의존성 전체 제거
        // spring-boot-starter-log4j2가 slf4j 구현체를 대체한다
        configureEach {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
            exclude group: 'ch.qos.logback', module: 'logback-classic'
            exclude group: 'ch.qos.logback', module: 'logback-core'
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}